# nostr-aio

./: README.md  pyproject.toml  pytest.ini  requirements.txt
nostraio/: event.py  key.py  proto.py
test/: test_event.py  test_key.py  test_proto.py
