[project]
name = "nostr-aio"
version = "0.0.1"
description = "Python library for interacting with Nostr relays using Asyncio."
authors = [
  { name="Austin Riba", email="austin@m51.io" }
]
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python"
]
dependencies = [
  "secp256k1",
  "websockets"
]

[project.urls]
Homepage = "https://github.com/Fingel/nostr-aio"
Repository = "https://github.com/Fingel/nostr-aio"
